--- a/style.css
+++ b/style.css
@@ -1,30 +1,30 @@
 *{
     margin:0;
     padding:0;
+    color:#FFFFFF; 
 }
 html{
     box-sizing: border-box;
-  }
-body{
+}
+  *,*::before,*::after{
+    box-sizing: inherit;
+}
+.container{
     max-width:1920px;
-    height:2898px;
-    color:#FFFFFF;
-    font-family:"Raleway" sans-serif;
-    font-style: normal;
-    margin:0 auto;
+    margin:0 auto; 
 }
 header{
-    background-image:url(/img/Rectangle.png);
-    background-size:cover;
-    margin:0 auto;
-    height:840px;
-    display:flex;
-    flex-direction: column;
+    background-image:url(/img/Rectangle.svg);
+    background-size:cover; 
+    height:1100px;  
 }
-.logo{
-    padding-left: 405px;
-    padding-right:435px;
-    padding-top:29px;  
+.header_wrapper{
+    display: flex;
+    justify-content:space-between;
+}
+.logo img{
+    padding-top:29px;
+    width:12em;
 }
 .menu{
     display: flex;
@@ -33,21 +33,16 @@ header{
     list-style:none;
 }
 .item{
-    padding-right:40px;
+    padding-right:50px;
   }
-.item:last-child{
-    padding-right:205px;
-}
 .header_link{
-    font-size:16px;
+    font-family:"Raleway";
+    font-style:normal;  
+    font-size:18px;
     line-height:16px;
     color:white;
     text-decoration: none;
     letter-spacing: 0.05em;
-}
-.header_wrapper{
-    display: flex;
-    justify-content:space-between;   
 }
 .header_main{
     display:flex;
@@ -57,13 +52,14 @@ header{
     padding-top:230px; 
 }
 .mouse{
-    width:40px;
+    width:60px;
     padding-top:50px;
 }
 .title{
     font-family: 'Playfair Display';
     font-weight: 700;
-    font-size: 48px;
+    font-size: 68px;
+    line-height:84px;
     text-align: center;
     color: #D4C17F;
 }
@@ -73,23 +69,17 @@ header{
     justify-content:space-evenly;
     padding-top:200px;  
 }
-.place{
+.place, .phone{
     display:flex;
-    justify-content: space-evenly;
-    width:230px;
-    height:21px; 
 }
-.phone{
-    display:flex;
-    justify-content: space-evenly;
-    width: 180px;
-    height: 21px;
-}
-.address .nummer{
+.address, .nummer{
+    font-family:'Raleway';
+    font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 25px;
+    line-height:21px;
     text-align: center;
+    padding-left:20px;
 }
 main{
     background-color:#242B33;
@@ -101,17 +91,20 @@ main{
    height:419px;
    align-items:center;
 }
-.fig{
-    text-align: center;
+.testimonials img{
+    width: 120px;
 }
 figcaption{
-    display: flex;
-    width: 205px;
+    font-family:'Raleway';
+    font-style: normal;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 23px;
     line-height: 27px;
-    padding: 20px;
+    padding-top:30px;
     text-align: center;
+}
+.fig{
+    margin-right: 150px;
 }
 figcaption:last-child{
     margin:0;
@@ -146,22 +139,14 @@ figcaption:last-child{
     display: flex;
     align-items: flex-end;
 }
-.loft_name1{
+.loft_name1, .loft_name3{
     background-image:url(/img/Rectangle\ \(1\).png);
     background-size:cover; 
 
 }
-.loft_name2{
+.loft_name2, .loft_name4{
    background-image:url(/img/Rectangle\ \(2\).png);
    background-size:cover;
-}
-.loft_name3{
-    background-image:url(/img/Rectangle\ \(1\).png);
-    background-size:cover;  
-}
-.loft_name4{
-    background-image:url(/img/Rectangle\ \(2\).png);
-    background-size:cover;
 }
 .last_part{
     background-image:url(/img/Rectangle22.png);
